tests/errors/std-boxed-drop-use-after.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let boxed = std::boxed::new<i64>(ref mut zone, 21);

  drop boxed;
  let value = boxed.get();

  zone::destroy(zone);
  return value;
}
